--- a/ConsultorioPsicologiaDuane/Views/Home/About.cshtml
+++ b/ConsultorioPsicologiaDuane/Views/Home/About.cshtml
@@ -1,7 +1,19 @@
 ﻿@{
-    ViewBag.Title = "About";
+    ViewBag.Title = "Sobre a Psicologia";
 }
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
+<h2>@ViewBag.Title</h2>
 
-<p>Use this area to provide additional information.</p>
+
+<p>
+    Fazer terapia com um psicólogo pode ser uma jornada transformadora e enriquecedora para muitas pessoas. Ao procurar a ajuda de um profissional de saúde mental, você está dando um passo corajoso em direção ao autocuidado e ao bem-estar emocional.
+
+    A importância de fazer terapia reside na oportunidade de explorar e compreender melhor seus pensamentos, sentimentos e comportamentos. Durante as sessões de terapia, você terá um espaço seguro e acolhedor para expressar suas preocupações, desafios e aspirações sem julgamento.
+
+    Um psicólogo qualificado irá trabalhar com você para identificar padrões de pensamento negativos, crenças limitantes e questões emocionais subjacentes que possam estar afetando sua qualidade de vida. Eles podem fornecer insights, estratégias e ferramentas práticas para ajudá-lo a enfrentar os desafios da vida de forma mais eficaz.
+
+    Além disso, a terapia oferece um ambiente de apoio onde você pode aprender habilidades de enfrentamento saudáveis, desenvolver uma maior autoconsciência e fortalecer seus relacionamentos interpessoais. Ao longo do tempo, você pode experimentar um maior senso de empoderamento, autenticidade e bem-estar emocional.
+
+    É importante notar que fazer terapia não é apenas para pessoas que estão enfrentando crises emocionais ou transtornos mentais graves. Mesmo se você estiver passando por um período de estresse, ansiedade moderada ou simplesmente buscando crescimento pessoal, a terapia pode ser benéfica.
+
+    Em suma, a importância de fazer terapia com um psicólogo reside na oportunidade de receber apoio especializado, autoconhecimento e crescimento pessoal. Ao investir em sua saúde mental, você está priorizando seu bem-estar emocional e trabalhando em direção a uma vida mais plena e significativa.
+</p>
