--- a/ConsultorioPsicologiaDuane/Views/Home/Index.cshtml
+++ b/ConsultorioPsicologiaDuane/Views/Home/Index.cshtml
@@ -3,30 +3,8 @@
 }
 
 <div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+    <h1>Psicologia</h1>
+    <p class="lead">Fazer terapia com um psicólogo oferece um espaço seguro para explorar seus pensamentos, sentimentos e desafios emocionais. Ao receber apoio especializado, você pode desenvolver uma maior autoconsciência, aprender habilidades de enfrentamento saudáveis e fortalecer seus relacionamentos. A terapia não apenas ajuda a lidar com crises emocionais, mas também promove o crescimento pessoal e o bem-estar emocional, capacitando você a viver uma vida mais autêntica e significativa.</p>
+    <p><a href="https://inpaonline.com.br/sessao-de-terapia-psicologica/#:~:text=A%20psicoterapia%2C%20tamb%C3%A9m%20chamada%20apenas,vida%2C%20tanto%20boas%20quanto%20ruins." class="btn btn-primary btn-lg">Leia mais &raquo;</a></p>
 
-</div>
-
-<div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
-    </div>
 </div>
