--- a/ConsultorioPsicologiaDuane/Views/Shared/_Layout.cshtml
+++ b/ConsultorioPsicologiaDuane/Views/Shared/_Layout.cshtml
@@ -17,13 +17,12 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Nome do aplicativo", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("Psicologia", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div >
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Início", "Index", "Home")</li>
                     <li>@Html.ActionLink("Sobre", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contato", "Contact", "Home")</li>
                     <li>@Html.ActionLink("Pacientes", "Pacientes", "Home")</li>
                 </ul>
             </div>
